# ai-news-brief

./: .dockerignore  .env.example  .gitignore  CLOUD_READINESS.md  DOCKER_SETUP.md  Dockerfile  README.md  TESTING_PLAN.md  config.py  lambda_handler.py  main.py  pyproject.toml  requirements.txt  run_grep_ai_news.sh  samconfig.toml  template.yaml  web_app.py
.claude/: settings.local.json
.protocols/: task_all_days_logic.md
ai/: __init__.py  client.py  prompts.py
articles/: __init__.py  extractor.py  selector.py
newsletter/: __init__.py  fetcher.py  parser.py
telegram/: client.py
telegram_notifications/: client.py
utils/: __init__.py  content.py  http.py  run_state.py  text.py
web/: __init__.py  routes.py
web/templates/: base.html  error.html  index.html  result.html
